--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -108,13 +108,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIk-GR-1ED">
-                                <rect key="frame" x="10" y="248" width="394" height="21"/>
+                                <rect key="frame" x="10" y="183" width="394" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Y3b-xK-cot">
-                                <rect key="frame" x="10" y="279" width="394" height="120"/>
+                                <rect key="frame" x="10" y="214" width="394" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="X2o-hO-kan"/>
@@ -125,41 +125,39 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="sIa-a3-gzR">
-                                <rect key="frame" x="0.0" y="450" width="414" height="30"/>
+                                <rect key="frame" x="0.0" y="385" width="414" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="LPY-v0-5me"/>
                                 </constraints>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhx-Fw-tg5">
-                                <rect key="frame" x="10" y="173" width="394" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eGQ-rW-SPu">
-                                <rect key="frame" x="10" y="204" width="394" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="リマインド" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjs-Yu-M7M">
-                                <rect key="frame" x="10" y="419" width="394" height="21"/>
+                                <rect key="frame" x="10" y="354" width="394" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uLV-WB-i2h">
-                                <rect key="frame" x="5" y="768" width="108" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="カテゴリー作成"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uLV-WB-i2h">
+                                <rect key="frame" x="20" y="616" width="140" height="33"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="TEM-k7-RLZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="カテゴリー作成">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <segue destination="JXv-qT-PB4" kind="show" id="fHR-5S-nR2"/>
                                 </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qsM-kg-gzX">
-                                <rect key="frame" x="10" y="531" width="414" height="216"/>
+                                <rect key="frame" x="10" y="466" width="414" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Dy9-dd-FcF"/>
+                                </constraints>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8uQ-u7-vxU">
-                                <rect key="frame" x="10" y="500" width="394" height="21"/>
+                                <rect key="frame" x="10" y="435" width="394" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -170,40 +168,35 @@
                         <constraints>
                             <constraint firstItem="qsM-kg-gzX" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="1vD-uR-PIw"/>
                             <constraint firstItem="qsM-kg-gzX" firstAttribute="trailing" secondItem="QhH-dV-dwo" secondAttribute="trailing" constant="10" id="2jM-O5-r3k"/>
-                            <constraint firstItem="eGQ-rW-SPu" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="5up-DF-YVm"/>
                             <constraint firstItem="kjs-Yu-M7M" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="7xH-zv-vrs"/>
                             <constraint firstItem="fIk-GR-1ED" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="Cpm-B1-fW0"/>
                             <constraint firstItem="8uQ-u7-vxU" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="Cpn-EH-LSJ"/>
                             <constraint firstItem="Y3b-xK-cot" firstAttribute="top" secondItem="fIk-GR-1ED" secondAttribute="bottom" constant="10" id="FEu-1J-Ak2"/>
-                            <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="eGQ-rW-SPu" secondAttribute="trailing" constant="10" id="G6d-oU-yOo"/>
                             <constraint firstItem="8uQ-u7-vxU" firstAttribute="top" secondItem="sIa-a3-gzR" secondAttribute="bottom" constant="20" id="IZ7-yG-VQc"/>
-                            <constraint firstItem="fIk-GR-1ED" firstAttribute="top" secondItem="eGQ-rW-SPu" secondAttribute="bottom" constant="10" id="UMp-sJ-gQG"/>
                             <constraint firstItem="UMK-JJ-Byo" firstAttribute="top" secondItem="QhH-dV-dwo" secondAttribute="top" constant="10" id="Wzh-9A-XIn"/>
                             <constraint firstItem="Y3b-xK-cot" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="XEb-Au-e3l"/>
-                            <constraint firstItem="uhx-Fw-tg5" firstAttribute="top" secondItem="bVb-ug-O1r" secondAttribute="bottom" constant="10" id="XPj-fR-thP"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="UMK-JJ-Byo" secondAttribute="trailing" constant="10" id="Ydt-uS-CWj"/>
                             <constraint firstItem="sIa-a3-gzR" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" id="Yhd-Dl-N4q"/>
                             <constraint firstItem="UMK-JJ-Byo" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="ZQb-Ym-Pjn"/>
                             <constraint firstItem="sIa-a3-gzR" firstAttribute="top" secondItem="kjs-Yu-M7M" secondAttribute="bottom" constant="10" id="aZu-Zz-ycs"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="fIk-GR-1ED" secondAttribute="trailing" constant="10" id="axA-MN-nkc"/>
-                            <constraint firstItem="uhx-Fw-tg5" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="ddD-he-xqF"/>
                             <constraint firstItem="kjs-Yu-M7M" firstAttribute="top" secondItem="Y3b-xK-cot" secondAttribute="bottom" constant="20" id="e5X-cU-8uY"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="8uQ-u7-vxU" secondAttribute="trailing" constant="10" id="gCb-tl-erd"/>
+                            <constraint firstItem="uLV-WB-i2h" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="20" id="hCe-7U-hR2"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="bVb-ug-O1r" secondAttribute="trailing" constant="10" id="iZB-f8-7Q5"/>
                             <constraint firstItem="bVb-ug-O1r" firstAttribute="top" secondItem="UMK-JJ-Byo" secondAttribute="bottom" constant="10" id="jlg-5h-lo3"/>
-                            <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="uhx-Fw-tg5" secondAttribute="trailing" constant="10" id="jrT-cO-Mde"/>
                             <constraint firstItem="bVb-ug-O1r" firstAttribute="leading" secondItem="QhH-dV-dwo" secondAttribute="leading" constant="10" id="mKe-gV-rQ5"/>
                             <constraint firstItem="qsM-kg-gzX" firstAttribute="top" secondItem="8uQ-u7-vxU" secondAttribute="bottom" constant="10" id="r5b-a3-1PI"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="Y3b-xK-cot" secondAttribute="trailing" constant="10" id="t0G-Ml-G2B"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="sIa-a3-gzR" secondAttribute="trailing" id="uoo-JM-pmh"/>
-                            <constraint firstItem="eGQ-rW-SPu" firstAttribute="top" secondItem="uhx-Fw-tg5" secondAttribute="bottom" constant="10" id="wZQ-K3-pdl"/>
                             <constraint firstItem="QhH-dV-dwo" firstAttribute="trailing" secondItem="kjs-Yu-M7M" secondAttribute="trailing" constant="10" id="wjy-NV-aiG"/>
+                            <constraint firstItem="fIk-GR-1ED" firstAttribute="top" secondItem="bVb-ug-O1r" secondAttribute="bottom" constant="20" id="ynh-hW-WBc"/>
+                            <constraint firstItem="uLV-WB-i2h" firstAttribute="top" secondItem="qsM-kg-gzX" secondAttribute="bottom" constant="50" id="zat-Xa-SWj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cN4-1u-ofl"/>
                     <connections>
                         <outlet property="categoryPickerView" destination="qsM-kg-gzX" id="gKu-9n-uo3"/>
-                        <outlet property="categoryTextField" destination="eGQ-rW-SPu" id="9bc-Us-Y5F"/>
                         <outlet property="contentsTextView" destination="Y3b-xK-cot" id="w38-tO-d8a"/>
                         <outlet property="datePicker" destination="sIa-a3-gzR" id="EyX-Ka-SzO"/>
                         <outlet property="titleTextField" destination="bVb-ug-O1r" id="vLp-LS-q8D"/>
@@ -278,6 +271,9 @@
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
